--- a/style.css
+++ b/style.css
@@ -46,6 +46,19 @@ body {
 		font-size: 25px;
 		padding:5px;
 }
+.box4{
+		height: 35px;
+		width: 160px;
+		background-color: #42f4ce;
+		color:black;
+		text-align: center;
+		font-weight: bold;
+		border-radius: 4px;
+		margin-top: 50%;
+		margin-left:calc(50% - 85px);
+		font-size: 25px;
+		padding: 5px;
+}
 a:link{
 		color: none; 
 		text-decoration: none
